--- a/httpd.conf
+++ b/httpd.conf
@@ -172,8 +172,8 @@ LoadModule fastcgi_module libexec/apache24/mod_fastcgi.so
 # It is usually good practice to create a dedicated user and group for
 # running httpd, as with most system services.
 #
-User www
-Group www
+User s471572
+Group p3332
 
 </IfModule>
 
