--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,5 @@
 ServerRoot "/usr/local"
-Listen 18080
+Listen 18087
 
 # Абсолютно минимальный набор
 LoadModule unixd_module libexec/apache24/mod_unixd.so
@@ -8,6 +8,8 @@ LoadModule dir_module libexec/apache24/mod_dir.so
 LoadModule log_config_module libexec/apache24/mod_log_config.so
 LoadModule proxy_module libexec/apache24/mod_proxy.so
 LoadModule proxy_fcgi_module libexec/apache24/mod_proxy_fcgi.so
+LoadModule authz_core_module libexec/apache24/mod_authz_core.so
+LoadModule authz_host_module libexec/apache24/mod_authz_host.so
 
 User www
 Group www
