--- a/httpd.conf
+++ b/httpd.conf
@@ -1,7 +1,14 @@
 ServerRoot "/usr/local"
 Listen 18087
 
-# Абсолютно минимальный набор
+# Отключаем AcceptFilter для работы без root
+AcceptFilter http none
+AcceptFilter https none
+
+# Используем семафоры вместо файлового mutex
+Mutex posixsem default
+
+# Абсолютно минимальный набор модулей
 LoadModule unixd_module libexec/apache24/mod_unixd.so
 LoadModule mime_module libexec/apache24/mod_mime.so
 LoadModule dir_module libexec/apache24/mod_dir.so
@@ -11,17 +18,22 @@ LoadModule proxy_fcgi_module libexec/apache24/mod_proxy_fcgi.so
 LoadModule authz_core_module libexec/apache24/mod_authz_core.so
 LoadModule authz_host_module libexec/apache24/mod_authz_host.so
 
-User www
-Group www
-ServerName localhost:18080
+# Комментируем User и Group - запускаем от своего пользователя
+# User www
+# Group www
+
+ServerName localhost:18087
 
 DocumentRoot "/home/studs/s471572/.www"
 <Directory "/home/studs/s471572/.www">
+    Options Indexes FollowSymLinks
+    AllowOverride None
     Require all granted
 </Directory>
 
 DirectoryIndex index.html
 
+# Пути должны существовать и быть доступны
 ErrorLog "/home/studs/s471572/httpd-root/error.log"
 PidFile "/home/studs/s471572/httpd-root/httpd.pid"
 CustomLog "/home/studs/s471572/httpd-root/access.log" common
@@ -30,4 +42,4 @@ ProxyRequests Off
 ProxyPass /check fcgi://localhost:1337/
 ProxyPassReverse /check fcgi://localhost:1337/
 ProxyPass /api/ fcgi://localhost:1337/
-ProxyPassReverse /api/ fcgi://localhost:133
+ProxyPassReverse /api/ fcgi://localhost:1337/
